welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:-6: error: Missing closing brace `}' assumed here
try {
^squirrelPlay:1: error: expected class or object definition
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
^